Fix 'incorrect display of interface widgets in the component diagram when adding a second connection'

With this commit a new class member WidgetBase::m_changesShape is
introduced to track widgets that changes it shape when the number of
connections or their positions are changed.

BUG:403761
FIXED-IN:2.27.2 (KDE Applications 18.12.2)